--- a/standAloneAssembly/Makefile
+++ b/standAloneAssembly/Makefile
@@ -15,7 +15,7 @@ KOKKOS_DEVICES = "Cuda,OpenMP"
 KOKKOS_ARCH = "SNB,Kepler35"
 else
 CXX = g++
-CXXFLAGS = -O3
+CXXFLAGS = -O3 -DKOKKOSP_ENABLE_PROFILING
 LINK = ${CXX}
 LINKFLAGS =  
 EXE = standAloneNalu
