working pre-vectorized assembly

--- a/vectorizedAssembly/Makefile
+++ b/vectorizedAssembly/Makefile
@@ -7,6 +7,7 @@ default: build
 
 ifneq (,$(findstring Cuda,$(KOKKOS_DEVICES)))
 CXX = nvcc_wrapper
+#CXXFLAGS = -O0 -g
 CXXFLAGS = -O3
 LINK = ${CXX}
 LINKFLAGS = 
@@ -15,6 +16,7 @@ KOKKOS_DEVICES = "Cuda,OpenMP"
 KOKKOS_ARCH = "SNB,Kepler35"
 else
 CXX = icc
+#CXXFLAGS = -O0 -g
 CXXFLAGS = -O3 -DKOKKOSP_ENABLE_PROFILING
 LINK = ${CXX}
 LINKFLAGS =  
